[rewrite] bump `UpgradeToJava21`
Signed-off-by: Vincent Potucek <vpotucek@me.com>